# Cashier

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: main.yml  pylint.yml  pytest.yml  python-package.yml
configs/dev/: mkdocs.yml  requirements.test.txt
docs/: conf.py  index.md  index.rst
docs/ref/: ref_m.md
docs/root/cashier/: src.cashier.purchase.bill.rst  src.cashier.rst  src.main.rst  src.rst
docs/source/: conf.py  index.rst
docs/source/root/cashier/: src.cashier.purchase.container.rst  src.cashier.purchase.formatter.rst  src.cashier.purchase.rst  src.cashier.purchase.tax_calculator.rst  src.cashier.register.rst  src.cashier.version.rst
requirements/: docs.txt  lint.txt  tests.txt  tox.txt
src/: main.py
src/cashier/: main.py  register.py  registrer.py  version.py
src/cashier/purchase/: bill.py  container.py  formatter.py  tax_calculator.py
src/cashier/register/: bill.py  container.py  formatter.py  registrer.py  tax_calculator.py
test/integration/: test_integration.py
test/integration/data/: test_run_in.txt  test_run_out.txt
test/unit/cashier/register/: test_bill.py  test_formatter.py  (+1 more)
test/unit/fixture/: fix_formatter.py  formatter.py  taxes.py
tests/integration/: test_integration.py
tests/integration/data/: test_run_in.txt  test_run_out.txt
tests/unit/: __init__.py
tests/unit/cashier/: test_register.py
tests/unit/fixture/: fix_taxes.py  test_fix_formatter.py  test_fix_taxes.py
(+3 files in other folders)
