[metadata]
name = Cashier
version = 0.1.0
description = Library for calculating sales taxes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/arturOnRails/Cashier
author = Artur Lissin
author_email = arturOnRails@protonmail.com
maintainer = Artur Lissin
maintainer_email = arturOnRails@protonmail.com
license = MIT
license_file = LICENSE
platforms = Linux
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
description_file = README.rst

[options]
packages = find:
python_requires = ==3.10
zip_safe = False

[options.entry_points]
console_scripts =
    cashier=src.main:main
